# ArduinoCMake

./: .gitignore  Arduino.cmake  CMakeLists.txt  README.md
cmake/: AVRtoolchain.cmake  Arduino.cmake
example/: CMakeLists.txt
include/: ard_honeyp.h
libraries/ard_utils/: README.md
libraries/ard_utils/include/: ard_ascale.h  ard_b64.h  ard_crc.h  ard_honeyp.h  ard_i2c.h  ard_mpu6050.h  ard_pid.h  ard_pot.h  ard_serial.h  ard_sos.h  ard_spline.h  ard_timing.h  ard_traj.h
libraries/ard_utils/src/: ard_ascale.c  ard_b64.c  ard_crc.c  ard_honeyp.c  ard_honeyp.cpp  ard_i2c.cpp  ard_mpu6050.c  ard_pid.c  ard_pot.c  ard_serial.cpp  ard_sos.c  ard_spline.c  ard_timing.c  ard_traj.c  main.cpp
modules/: Arduino.cmake  ArduinoExtraLibraries.cmake  ArduinoLibraryArdUtils.cmake  ArduinoLibraryEEPROM.cmake  ArduinoLibrarySPI.cmake  ArduinoLibraryWire.cmake  ArduinoLilypad168.cmake  ArduinoLilypad328.cmake  ArduinoLilypadUSB.cmake  ArduinoMega1280.cmake  ArduinoMega2560.cmake  ArduinoNano168.cmake  ArduinoNano328.cmake  ArduinoNano328old.cmake  ArduinoProMini3V168.cmake  ArduinoProMini5V168.cmake  ArduinoProMini5V328.cmake  ArduinoUno.cmake
src/: blink.cpp
